[workspace]
resolver = "2"
members = [
    "thaw",
    "thaw_components",
    "thaw_macro",
    "thaw_utils",
    "demo",
    "demo_markdown",
]
exclude = ["examples"]

[workspace.package]
rust-version = "1.79"

[workspace.dependencies]
thaw = { version = "0.4.6", path = "./thaw" }
thaw_components = { version = "0.3.1", path = "./thaw_components" }
thaw_macro = { version = "0.1.0", path = "./thaw_macro" }
thaw_utils = { version = "0.1.1", path = "./thaw_utils" }

leptos = { version = "0.7.7" }
leptos_meta = { version = "0.7.7" }
leptos_router = { version = "0.7.7" }
reactive_stores = { version = "0.1.7" }
