[package]
publish = false
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6.7" }
leptos_meta = { version = "0.6.7" }
leptos_router = { version = "0.6.7" }
leptos_devtools = { version = "0.0.1", optional = true }
thaw = { path = "../thaw" }
demo_markdown = { path = "../demo_markdown" }
icondata = "0.3.0"
palette = "0.7.4"
chrono = "0.4.33"

[features]
default = ["csr"]
tracing = ["leptos/tracing"]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr", "thaw/csr"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "thaw/ssr"]
hydrate = [
    "leptos/hydrate",
    "leptos_meta/hydrate",
    "leptos_router/hydrate",
    "thaw/hydrate",
]
nightly = ["leptos/nightly", "leptos_meta/nightly", "leptos_router/nightly"]

# https://benw.is/posts/how-i-improved-my-rust-compile-times-by-seventy-five-percent#optimization-level

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
