[package]
publish = false
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { git = "https://github.com/leptos-rs/leptos", rev = "ae0dc13c" }
thaw = { path = "../thaw" }
demo_markdown = { path = "../demo_markdown" }
icondata = "0.3.0"
palette = "0.7.4"
chrono = "0.4.33"
cfg-if = "1.0.0"
leptos-use = "0.10.10"
send_wrapper = "0.6"

[features]
default = ["csr"]
tracing = ["leptos/tracing"]
csr = ["leptos/csr", "thaw/csr"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "thaw/ssr"]
hydrate = [
    "leptos/hydrate",
    "thaw/hydrate",
]
nightly = ["leptos/nightly", "leptos_router/nightly"]

# https://benw.is/posts/how-i-improved-my-rust-compile-times-by-seventy-five-percent#optimization-level

# [profile.dev]
# opt-level = 1

# [profile.dev.package."*"]
# opt-level = 3
