[package]
publish = false
name = "demo_markdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.36"
comrak = "0.26.0"
proc-macro2 = "1.0.86"
syn = "2.0.74"
syntect = "5.2.0"

# fix: https://github.com/jhpratt/deranged/issues/17
deranged = "=0.4.0"