[package]
name = "gh-pages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.4.8", features = ["csr"] }
melt-ui = { path = "../" }
icondata = { version = "0.0.7", features = [
    "AiCloseOutlined",
    "AiCheckOutlined",
] }
leptos_router = { version = "0.4.0", features = ["csr"] }
indoc = "2.0.1"
regex = "1.8.2"
