[package]
name = "gh-pages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.0", features = ["csr"] }
melt-ui = { path = "../" }
icondata = { version = "0.0.7", features = [
    "AiCloseOutlined",
    "AiCheckOutlined",
] }
leptos_router = { version = "0.5.0", features = ["csr"] }
regex = "1.8.2"
leptos_devtools = "0.0.1"
prisms = { git = "https://github.com/luoxiaozero/prisms" }

[features]
tracing = ["leptos/tracing"]
