[package]
name = "thaw"
version = "0.2.0-alpha"
edition = "2021"
keywords = ["web", "leptos", "ui", "thaw", "component"]
readme = "../README.md"
authors = ["luoxiaozero"]
description = "An easy to use leptos component library"
homepage = "https://github.com/thaw-ui/thaw"
repository = "https://github.com/thaw-ui/thaw"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6.5" }
leptos_meta = { version = "0.6.5", optional = true }
web-sys = { version = "0.3.67", features = [
    "DomRect",
    "File",
    "FileList",
    "DataTransfer",
] }
wasm-bindgen = "0.2.90"
icondata_core = "0.1.0"
icondata_ai = "0.0.10"
uuid = { version = "1.7.0", features = ["v4"] }
cfg-if = "1.0.0"
chrono = "0.4.33"

[features]
csr = ["leptos/csr"]
ssr = ["leptos/ssr", "leptos_meta/ssr"]
hydrate = ["leptos/hydrate"]
