[package]
name = "thaw"
version = "0.4.0-beta3"
edition = "2021"
keywords = ["web", "leptos", "ui", "thaw", "component"]
readme = "../README.md"
authors = ["luoxiaozero"]
description = "An easy to use leptos component library"
homepage = "https://github.com/thaw-ui/thaw"
repository = "https://github.com/thaw-ui/thaw"
license = "MIT"
exclude = ["src/**/*.md"]
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { workspace = true }
thaw_components = { workspace = true }
thaw_macro = { workspace = true }
thaw_utils = { workspace = true }
web-sys = { version = "0.3.70", features = [
    "DomRect",
    "File",
    "FileList",
    "DataTransfer",
    "ScrollToOptions",
    "ScrollBehavior",
    "TreeWalker",
    "NodeFilter",
] }
wasm-bindgen = "0.2.93"
icondata_core = "0.1.0"
icondata_ai = "0.0.10"
uuid = { version = "1.10.0", features = ["v4", "js"] }
cfg-if = "1.0.0"
chrono = "0.4.38"
palette = "0.7.6"
num-traits = "0.2.19"
send_wrapper = "0.6"
slotmap = "1.0"

[features]
csr = ["leptos/csr", "thaw_components/csr", "thaw_utils/csr"]
ssr = ["leptos/ssr", "thaw_components/ssr", "thaw_utils/ssr"]
hydrate = ["leptos/hydrate", "thaw_components/hydrate", "thaw_utils/hydrate"]
nightly = ["leptos/nightly", "thaw_utils/nightly"]
