[package]
name = "thaw"
version = "0.5.0-beta"
edition = "2021"
keywords = ["web", "leptos", "ui", "thaw", "component"]
readme = "../README.md"
authors = ["lizidev"]
description = "An easy to use leptos component library"
homepage = "https://github.com/thaw-ui/thaw"
repository = "https://github.com/thaw-ui/thaw"
license = "MIT"
exclude = ["src/**/*.md"]
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { workspace = true }
leptos_meta = { workspace = true, optional = true }
thaw_components = { workspace = true }
thaw_macro = { workspace = true }
thaw_utils = { workspace = true }
leptos_transition_group = { version = "0.2.0" }
web-sys = { version = "0.3.72", features = [
    "DomRect",
    "File",
    "FileList",
    "DataTransfer",
    "ScrollToOptions",
    "ScrollBehavior",
    "TreeWalker",
    "NodeFilter",
] }
wasm-bindgen = { workspace = true }
icondata_core = "0.1.0"
icondata_ai = "0.0.10"
uuid = { version = "1.10.0", features = ["v4", "js"] }
cfg-if = "1.0.0"
chrono = "0.4.38"
palette = "0.7.6"
num-traits = "0.2.19"
send_wrapper = "0.6"
slotmap = "1.0"
getset = "0.1.5"
manganis = { workspace = true, optional = true }

[features]
csr = ["leptos/csr", "thaw_components/csr", "thaw_utils/csr"]
ssr = ["leptos/ssr", "thaw_components/ssr", "thaw_utils/ssr", "leptos_meta/ssr"]
hydrate = ["leptos/hydrate", "thaw_components/hydrate", "thaw_utils/hydrate"]
nightly = ["leptos/nightly", "thaw_utils/nightly"]
manganis = ["dep:manganis", "dep:leptos_meta", "thaw_components/manganis"]
