[package]
name = "thaw_macro"
version = "0.1.0-beta3"
edition = "2021"
keywords = ["leptos", "thaw", "macro"]
readme = "../README.md"
authors = ["luoxiaozero"]
description = "Shared Thaw internal macro"
repository = "https://github.com/thaw-ui/thaw"
license = "MIT"
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.36"
syn = "2.0.74"
proc-macro2 = "1.0.86"