[package]
name = "thaw_utils"
version = "0.0.3"
edition = "2021"
keywords = ["leptos", "thaw", "utils"]
readme = "../README.md"
authors = ["luoxiaozero"]
description = "Shared Thaw utility functions"
repository = "https://github.com/thaw-ui/thaw"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { workspace = true }
leptos_meta = { version = "0.6.10", optional = true }
web-sys = "0.3.69"
wasm-bindgen = "0.2.92"
cfg-if = "1.0.0"
chrono = "0.4.35"

[features]
csr = ["leptos/csr"]
ssr = ["leptos/ssr", "leptos_meta/ssr"]
hydrate = ["leptos/hydrate"]
