[package]
name = "thaw_utils"
version = "0.1.0-beta4"
edition = "2021"
keywords = ["leptos", "thaw", "utils"]
readme = "../README.md"
authors = ["luoxiaozero"]
description = "Shared Thaw utility functions"
repository = "https://github.com/thaw-ui/thaw"
license = "MIT"
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { workspace = true }
leptos_meta = { workspace = true, optional = true }
reactive_stores = { workspace = true }
web-sys = "0.3.70"
wasm-bindgen = "0.2.95"
cfg-if = "1.0.0"
chrono = "0.4.38"
send_wrapper = "0.6"

[features]
csr = ["leptos/csr"]
ssr = ["leptos/ssr", "leptos_meta/ssr"]
hydrate = ["leptos/hydrate"]
nightly = ["leptos/nightly"]